syntax = "proto3";

package blimp.login.v0;

import "blimp/errors/v0/errors.proto";

option go_package = "github.com/kelda/blimp/pkg/proto/login";

service Login {
    rpc Login(LoginRequest) returns (stream LoginResponse) {}
    rpc ExchangeRefreshToken(ExchangeRefreshTokenRequest) returns (ExchangeRefreshTokenResponse) {}
}

message LoginRequest {
}

message LoginResponse {
    blimp.errors.v0.Error error = 1;

    oneof msg {
        LoginInstructions instructions = 2;
        LoginResult result = 3;
    }
}

message LoginInstructions {
    string URL = 1;
}

message LoginResult {
    string id_token = 1;
    string error = 2;
    string refresh_token = 3;
}

message ExchangeRefreshTokenRequest {
    string refresh_token = 1;
}

message ExchangeRefreshTokenResponse {
    string id_token = 1;
    string error = 2;
}
